fix(skin): CssVarDeclarationValidator改用JDK8兼容写法替代String.isBlank()
项目java.version=1.8，isBlank()是JDK11+的API，本地JDK版本较新导致编译期未报错，
但线上JDK8运行时会抛NoSuchMethodError。改为trim().isEmpty()等价实现。